formatting and test